--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "fosscord",
-    "slug": "fosscord",
+    "name": "meme-cord",
+    "slug": "meme-cord",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
